crates/dbt-antlr-codegen/src/grammar/snapshots/dbt_antlr_codegen__grammar__mutual_recursion__tests__assoc_right_preserved.snap
---
source: crates/dbt-antlr-codegen/src/grammar/mutual_recursion.rs
assertion_line: 1713
expression: render(&unit)
---
expr:
  | <assoc=right> expr ''^'' expr
  | ID
