crates/dbt-antlr-codegen/src/grammar/snapshots/dbt_antlr_codegen__grammar__mutual_recursion__tests__chained_assoc_carried.snap
---
source: crates/dbt-antlr-codegen/src/grammar/mutual_recursion.rs
assertion_line: 1728
expression: render(&unit)
---
e:
  | <assoc=right> e ''^'' e
  | ID
