crates/dbt-antlr-codegen/src/grammar/snapshots/dbt_antlr_codegen__grammar__mutual_recursion__tests__consecutive_optionals.snap
---
source: crates/dbt-antlr-codegen/src/grammar/mutual_recursion.rs
assertion_line: 1619
expression: render(&unit)
---
e:
  | e ''+'' e
  | e e? ''..''
  | e ''..''
  | ''..''
  | ID
