crates/dbt-antlr-codegen/src/grammar/snapshots/dbt_antlr_codegen__grammar__mutual_recursion__tests__declared_order_preserved.snap
---
source: crates/dbt-antlr/src/grammar/mutual_recursion.rs
assertion_line: 1753
expression: render(&unit)
---
e:
  | e ''*'' e
  | e ''+'' e
  | ID
