crates/dbt-antlr-codegen/src/grammar/snapshots/dbt_antlr_codegen__grammar__mutual_recursion__tests__name_cycle_collapsed.snap
---
source: crates/dbt-antlr-codegen/src/grammar/mutual_recursion.rs
assertion_line: 1566
expression: render(&unit)
---
name:
  | name ''.'' simple_name
  | simple_name
simple_name:
  | ID
