crates/dbt-antlr-codegen/src/grammar/snapshots/dbt_antlr_codegen__grammar__mutual_recursion__tests__preserved_rule_selected_as_hub.snap
---
source: crates/dbt-antlr-codegen/src/grammar/mutual_recursion.rs
assertion_line: 1700
expression: render(&fixture.unit)
---
b:
  | b ''a'' ''b''
  | A ''b''
  | B
