crates/dbt-antlr-codegen/src/grammar/snapshots/dbt_antlr_codegen__grammar__mutual_recursion__tests__preserved_satellite_retained.snap
---
source: crates/dbt-antlr/src/grammar/mutual_recursion.rs
assertion_line: 1679
expression: render(&fixture.unit)
---
e:
  | e ''+'' ID
  | ID
s:
  | e ''+'' ID
