crates/dbt-antlr-codegen/src/grammar/snapshots/dbt_antlr_codegen__grammar__mutual_recursion__tests__suffix_satellite_retained.snap
---
source: crates/dbt-antlr/src/grammar/mutual_recursion.rs
assertion_line: 1885
expression: render(&unit)
---
e:
  | e ''+'' ID s
  | ID
s:
  | e ''+'' ID
